--- a/movies-service/src/package.json
+++ b/movies-service/src/package.json
@@ -16,6 +16,7 @@
     "helmet": "^3.12.0",
     "mongodb": "^3.0.8",
     "morgan": "^1.9.0",
+    "supertest": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0"
   }
